<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/headerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streaming_from_yandex_disk"
        android:textColor="@color/description_menu"
        android:textSize="12sp" />

</LinearLayout >